--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "axios": "^1.3.4",
+    "modern-normalize": "^1.1.0"
   }
 }
